--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/png/sheemaanjumshaik.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">sheemaanjumshaik</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is sheemaanjumshaik</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
@@ -389,7 +389,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">sheemaanjumshaik</h4>
             <p class="main-footer__short-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
               tempora explicabo quae quod deserunt
