--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/sheemaanjumshaik.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="sheemaanjumshaik Logo Image"
               class="header__logo-img"
             />
           </div>
@@ -165,7 +165,7 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
+                <strong>sheemaanjumshaik</strong>
                 and I'm a <strong> Frontend Web Developer </strong> located in
                 Los Angeles. I've done
                 <strong> remote </strong>
