--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         <h1 class="heading-primary">Hey, My name is sheemaanjumshaik</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+           This project of full stack development was proudly telling up done and succesully performed
           </p>
         </div>
         <div class="home-hero__cta">
@@ -167,7 +165,7 @@
                 Hey! It's
                 <strong>sheemaanjumshaik</strong>
                 and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                Guntur. I've done
                 <strong> remote </strong>
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
@@ -210,8 +208,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+           this project was done by using html,css,javascript,react,os and many techonologies used for this project
           </span>
         </h2>
 
@@ -228,9 +225,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 1</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                this project was reallly a good experience for me and it was used to perform to do this wonerful experience
               </p>
               <a
                 href="./project-1.html"
@@ -252,9 +247,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 2</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+               first it was done at 4 case study and it was used to be done based on front end development
               </p>
               <a
                 href="./project-2.html"
@@ -276,9 +269,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Project 3</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+               in this case we have to done case study and these are used to perform a webisite which will help 
               </p>
               <a
                 href="./project-3.html"
@@ -296,8 +287,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            if u have have any problems or quiers you can contact us
           </span>
         </h2>
         <div class="contact__form-container">
@@ -391,8 +381,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">sheemaanjumshaik</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              you can follow our website at social media like twitter,instagram etc...,
             </p>
           </div>
         </div>
