--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+           my self sheemaanjumshaik i'm from Guntur studing btech 3rd year computer science and engineering 
           </span>
         </h2>
         <div class="about__content">
